<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>io.alpenglow</groupId>
    <artifactId>alpenglow</artifactId>
    <version>1.1-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <name>Alpenglow Stack with Digital Ocean</name>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>19</source>
          <target>19</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <artifactId>io.alpenglow.digitalocean</artifactId>

  <properties>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <mainClass>io.alpenglow.digitalocean.Main</mainClass>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.pulumi</groupId>
      <artifactId>digitalocean</artifactId>
      <version>4.15.2</version>
    </dependency>
  </dependencies>

</project>
